--- a/index.html
+++ b/index.html
@@ -25,35 +25,38 @@
     </head>
 
     <body>
+        <div class='page'>
+            <div class='section menu'></div>
+            <div class='section header'>
 
-        <div>
-            <a href="index.html">Hem</a>
-            <a href="CV.html">CV</a>
-            <a href="blogg.htm" l>Blogg</a>
-            <a href="kontakt.html">Kontakt</a>
-        </div>
-        <div class="main-container">
+                <div>
+                    <a href="index.html">Hem</a>
+                    <a href="CV.html">CV</a>
+                    <a href="blogg.htm" l>Blogg</a>
+                    <a href="kontakt.html">Kontakt</a>
+                </div>
+                <div class="main-container">
 
-            <h1>Välkommen till min webbsajt!</h1>
+                    <h1>Välkommen till min webbsajt!</h1>
 
-            <form onsumbit=sendFeedback(event)>
-                <img src="unnamed.jpg" style="width: 100%;" alt="unnamed.jpg">
-                <h2>Lite om mig</h2>
-                <p>Mitt namn är David Candemir, jag är 31 år gammal och är född och uppvuxen i Spånga i Stockholm, där jag fortfarande bor.
+                    <form onsumbit=sendFeedback(event)>
+                        <img src="unnamed.jpg" style="width: 100%;" alt="unnamed.jpg">
+                        <h2>Lite om mig</h2>
+                        <p>Mitt namn är David Candemir, jag är 31 år gammal och är född och uppvuxen i Spånga i Stockholm, där jag fortfarande bor.
 
-                    <p>Jag är en ansvarsfull, driven, lättlärd och social kille i utmärkt fysisk form som är bra på att samarbeta med andra människor.<br> Jag har lätt för att ta initiativ och engagera mig, är seriös och väldigt noggrann med hög servicekänsla
-                        och personlig-yrkesmässig utvecklingssträvan. Jag är väldigt kreativ och kommer gärna med nya idéer och förslag och har därtill ett gott ordningssinne. Att ha kundkontakt inspirerar mig och jag har lätt för att bemöta olika slags
-                        människor. Mina vänner beskriver mig även som pålitlig, lojal och ärlig samt flexibel. Jag har ett stort intresse för djur, framförallt akvariefiskar och hundar. Jag har också ett estetiskt sinne, med intresse för design, arkitektur
-                        och inredning. Jag hoppas att få komma och presentera mig lite närmare! Med vänlig hälsning
+                            <p>Jag är en ansvarsfull, driven, lättlärd och social kille i utmärkt fysisk form som är bra på att samarbeta med andra människor.<br> Jag har lätt för att ta initiativ och engagera mig, är seriös och väldigt noggrann med hög
+                                servicekänsla och personlig-yrkesmässig utvecklingssträvan. Jag är väldigt kreativ och kommer gärna med nya idéer och förslag och har därtill ett gott ordningssinne. Att ha kundkontakt inspirerar mig och jag har lätt för
+                                att bemöta olika slags människor. Mina vänner beskriver mig även som pålitlig, lojal och ärlig samt flexibel. Jag har ett stort intresse för djur, framförallt akvariefiskar och hundar. Jag har också ett estetiskt sinne,
+                                med intresse för design, arkitektur och inredning. Jag hoppas att få komma och presentera mig lite närmare! Med vänlig hälsning
 
-                    </p>
-
-
+                            </p>
 
 
-                    <p><a href="mailto:david.candemir@chasacademy.se">Kontakta mig - skicka iväg ett mejl!</a></p>
-                    <a href="#">Till toppen</a>
-                    <h2 id="thankYou"></h2>
+
+
+                            <p><a href="mailto:david.candemir@chasacademy.se">Kontakta mig - skicka iväg ett mejl!</a></p>
+                            <a href="#">Till toppen</a>
+                            <h2 id="thankYou"></h2>
 
     </body>
 
