--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
         <h1>Välkommen till min webbsajt!</h1>
 
         <form onsumbit=sendFeedback(event)>
-            <img src="unnamed.jpg">
+            <img src="unnamed.jpg" alt="David in sunglasses" width="500" height="400" style width="100%">
             <h2>Lite om mig</h2>
-            <p>Mitt namn är David Candemir, jag är 31 år gammal och är född och uppvuxen i Spånga i Stockholm, där jag fortfarande bor.
-
+            <p>Mitt namn är David Candemir, jag är 31 år gammal och är född och uppvuxen i Spånga i Stockholm, där jag fortfarande bor
                 <p>Jag är en ansvarsfull, driven, lättlärd och social kille i utmärkt fysisk form som är bra på att samarbeta med andra människor.<br> Jag har lätt för att ta initiativ och engagera mig, är seriös och väldigt noggrann med hög servicekänsla
                     och personlig-yrkesmässig utvecklingssträvan. Jag är väldigt kreativ och kommer gärna med nya idéer och förslag och har därtill ett gott ordningssinne. Att ha kundkontakt inspirerar mig och jag har lätt för att bemöta olika slags människor.
                     Mina vänner beskriver mig även som pålitlig, lojal och ärlig samt flexibel. Jag har ett stort intresse för djur, framförallt akvariefiskar och hundar. Jag har också ett estetiskt sinne, med intresse för design, arkitektur och inredning.
@@ -56,4 +55,4 @@
 
 </body>
 
-</html>!
+</html>
