--- a/kontakt.html
+++ b/kontakt.html
@@ -27,22 +27,28 @@
     <form onsubmit=sendFeedback(event)>
         <div>
             <label for="name">Ditt namn</label>
+            <br>
             <input type="text" id="name">
         </div>
 
         <br>
 
         <div><label for="email">Din email</label>
+            <br>
             <input type="email" id="email">
         </div>
         <br>
-        <label for="message">Meddelande</label>
-        <textarea id="message" name="Meddelande" row="4" coles="50" autofocus></textarea>
-        </div>
-
-        <input type="submit" value="Skicka meddelandet!">
         <div>
-
+            <label for="message">Meddelande</label>
+            <br>
+            <input type="text" id="message">
+            <!--textarea id="message" name="Meddelande" row="4" coles="50" autofocus>
+            </textarea-->
+        </div>
+        <br>
+        <div>
+            <input type="submit" id="submitButton" value="Skicka meddelandet! ">
+        </div>
 
 
 
@@ -51,9 +57,10 @@
 
     </form>
     <h3 id="thankyouMessage">
-        </h>
+    </h3>
 
-        <img src="DavidC.jpg">
+
+    <img src=" DavidC.jpg " alt="Smiling David in blue shirt " width="350 " height="500 " style width="100% ">
 </body>
 
 </html>
