--- a/kontakt.html
+++ b/kontakt.html
@@ -60,7 +60,7 @@
     </h3>
 
 
-    <img src=" DavidC.jpg " alt="Smiling David in blue shirt " width="350 " height="500 " style width="100% ">
+    <!--img src=" DavidC.jpg " alt="Smiling David in blue shirt " width="350 " height="500 " style width="100%"-->
 </body>
 
 </html>
