--- a/kontakt.html
+++ b/kontakt.html
@@ -7,6 +7,11 @@
             background-color: burlywood;
         }
     </style>
+    <style>
+        h1 {
+            background-color: rgb(230, 203, 173);
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum scale= 1,0">
     <script src="javascript.js"></script>
