--- a/Blogg.html
+++ b/Blogg.html
@@ -17,19 +17,19 @@
     <title>Blogg</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<div>
-    <a href="index.html">Hem</a>
-    <a href="CV.html">CV</a>
-    <a href="blogg.html">Blogg</a>
-    <a href="kontakt.html">Kontakt</a>
+<div class="a">
+    <a href="index.html ">Hem</a>
+    <a href="CV.html ">CV</a>
+    <a href="blogg.html ">Blogg</a>
+    <a href="kontakt.html ">Kontakt</a>
 </div>
-<div class="main-container">
+<div class="c">
 
     <body>
         <h1>Blogg</h1>
-        <br>
+
         <h2>Här var det tomt!</h2>
-
+        <img src="unnamed.jpg" alt="David in sunglasses" class="responsive" width="400" height="400">
     </body>
-
+</div>
 </html>
