--- a/kontakt.html
+++ b/kontakt.html
@@ -25,7 +25,7 @@
     <div class="a">
         <a href="index.html">Hem</a>
         <a href="CV.html">CV</a>
-        <a href="Blogg.html">Blogg</a>
+        <a href="blogg.html">Blogg</a>
         <a href="kontakt.html">Kontakt</a>
     </div>
  <div class="c">
