--- a/kontakt.html
+++ b/kontakt.html
@@ -15,7 +15,7 @@
         }
     </style>
     <style>
-        h1 {
+        h2 {
             background-color: rgb(230, 203, 173);
         }
     </style>
@@ -24,13 +24,13 @@
 <body>
     <div class="a">
         <a href="index.html">Hem</a>
-        <a href="CV.html">CV</a>
-        <a href="blogg.html">Blogg</a>
+        <a href="CV.html">Utbildning</a>
+        <a href="blogg.html">Erfarenhet</a>
         <a href="kontakt.html">Kontakt</a>
     </div>
  <div class="c">
-    <h1>Kontakta mig!</h1>
-   
+    <h2>Kontakt</h2>
+   <br>
         <form onsubmit=sendFeedback(event)>
         <div>
              <label for="name">Ditt namn</label>
@@ -55,15 +55,17 @@
         <div class="c">
             <input type="submit" id="submitButton" value="Skicka meddelandet! ">
         </div>
+  
+    <h4 id="thankyouMessage">
+    </h4>  
+</form>
+
+
+        <img src="unnamed.jpg" alt="David in sunglasses" class="responsive" width="400" height="400">
 
 
 
-
-
-
-    </form>
-    <h3 id="thankyouMessage">
-    </h3>
+  
 
 
   
