--- a/CV.html
+++ b/CV.html
@@ -29,7 +29,10 @@
 
 <body>
     
-    <div class="d"><h2>Utbildning</h2></div>
+    <div class="b">
+        <div tabindex="1">
+        <h2>Utbildning</h2></div>
+    
 
   
     <br>
