--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <body>
 
          <div class="c">
-                <h2>David Candemir</h2>
+                <div tabindex="1"><h2>David Candemir</h2></div>
                <br>
                 <div onsumbit=sendFeedback(event)>
                     
