--- a/kontakt.html
+++ b/kontakt.html
@@ -28,9 +28,9 @@
         <a href="blogg.html">Erfarenhet</a>
         <a href="kontakt.html">Kontakt</a>
     </div>
- <div class="c">
-    <h2>Kontakt</h2>
-   <br>
+ <class class="c">
+   <div tabindex="1"><h2>Kontakt</h2></class></div>
+   
         <form onsubmit=sendFeedback(event)>
         <div>
              <label for="name">Ditt namn</label>
@@ -54,18 +54,16 @@
         <br>
         <div class="c">
             <input type="submit" id="submitButton" value="Skicka meddelandet! ">
-        </div>
+        
   
     <h4 id="thankyouMessage">
     </h4>  
-</form>
 
+<img src="unnamed.jpg" alt="David in sunglasses" class="responsive" width="400" height="400">
 
-        <img src="unnamed.jpg" alt="David in sunglasses" class="responsive" width="400" height="400">
+</div>
 
-
-
-  
+  </form>
 
 
   
